# rig

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: PROJECT.md  settings.json
.claude/agents/: api-designer.md  code-architect.md  code-reviewer.md  documentation-architect.md  documentation-reviewer.md  mutation-test-analyst.md  performance-architect.md  refactoring-architect.md  specification-architect.md  test-architect.md  web-research-specialist.md
.claude/commands/plan/: create-multi-stage.md  review.md
.claude/commands/review/: docs.md  full.md  performance.md  security.md  specification.md  standards.md  tests.md  types.md
.claude/hooks/: skill_activation_prompt.py
.claude/skills/: skill-rules.json
.claude/skills/actions-cicd-practices/: SKILL.md
.claude/skills/benchmarking/: SKILL.md
.claude/skills/dataclass-patterns/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/hypothesis-strategies/: SKILL.md
.claude/skills/just-automation-practices/: SKILL.md
.claude/skills/profiling-practices/: SKILL.md
.claude/skills/python-dev-practices/: SKILL.md
.claude/skills/security-practices/: SKILL.md
.claude/skills/shell-dev-practices/: SKILL.md
.claude/skills/skill-developer/: SKILL.md
.claude/skills/testing-practices/: SKILL.md
.claude/skills/type-safety/: SKILL.md
.claude/standards/: design-principles.md  diagram-requirements.md  documentation-standards.md  github-cli.md  python-execution.md  quality-gates.md  test-standards.md
.github/workflows/: ci.yml
docs/: config.md
src/rig/: __init__.py  cli.py  paths.py
src/rig/commands/: __init__.py  _install.py  _uninstall.py
src/rig/config/: __init__.py  _discovery.py  _errors.py  _merge.py  _parser.py  _paths.py  _query.py  _resolver.py  _schema.py  _serialization.py  _types.py
tests/integration/config/: conftest.py  test_cli_commands.py  test_config_integration.py  test_discovery.py  test_merging.py  test_parsing.py  test_public_api.py
tests/properties/: test_install_properties.py
tests/properties/config/: conftest.py  test_discovery_properties.py  test_merge_properties.py  test_query_properties.py  test_schema_properties.py  test_serialization_properties.py
tests/unit/: test_cli.py  test_init.py  test_install.py  test_paths.py  test_uninstall.py
tests/unit/config/: test_discovery.py  test_merge.py  test_parser.py  test_paths.py  test_query.py  test_resolver.py  test_schema.py  test_serialization.py
